<resources>
    <string name="app_name">TheMarketer</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="MobileNumber">Mobile Number</string>
    <string name="Continue">Continue</string>
    <string name="EnterVerificationCode">Enter Verification Code</string>
    <string name="Confirm">Confirm</string>
    <string name="EnterYourpasssword">Enter Your passsword</string>
    <string name="WhatsyourName">What\'s your Name ?</string>
    <string name="Letusknowmoreaboutyou">Let us know more about you</string>
    <string name="PleaseEnterYourName">Please Enter Your Name...</string>
    <string name="PleaseTapyourFavoriteCategories">Please Tap your Favorite Categories</string>
    <string name="StartGrabingYourOffersNow">Start Grabing Your Offers Now!</string>
    <string name="Enter_your_mobile_number_for_verification">enter your mobile number for verification</string>
    <string name="enter_6_Digits_numbers_were_sent_to_your_mobile">enter 6-Digits numbers were sent to your mobile</string>
    <string name="MY_STATUS">MY STATUS</string>
    <string name="WISHLIST">WISHLIST</string>
    <string name="MENU">MENU</string>
    <string name="MESSAGE">MESSAGE</string>

    <string name="PROFILE">PROFILE</string>
    <string name="Favorite">Favorite</string>
    <string name="Soldby">"Sold by: "</string>
    <string name="Size">Size | </string>
    <string name="Color">Color|</string>
    <string name="ADD_TO_CARD">ADD TO CARD</string>


    <string name="TopMarketers">Top Marketers</string>
    <string name="ConfirmPassword">Confirm Password</string>
    <string name="Change">(Change)</string>
    <string name="Messages">Messages</string>
    <string name="search">search</string>
    <string name="MyWishlist">My Wishlist</string>
    <string name="my_profile">my profile</string>
    <string name="Edit">Edit</string>
    <string name="My_state">My state</string>
    <string name="My_shopping_cart">My shopping cart</string>
    <string name="Logout">Log out</string>
    <string name="ChooseImage">Choose Image</string>
    <string name="Password">Password</string>
    <string name="Save">Save</string>
    <string name="SeeAll">See All</string>
    <string name="PopularBrands">Popular Brands</string>
    <string name="FeaturedCoffeshops">Featured CoffeShops</string>
    <string name="MainDishes">Main Dishes</string>
    <string name="Dessert">Dessert</string>
    <string name="Snaks">Snaks</string>
    <string name="Drinks">Drinks</string>
    <string name="Salads">Salads</string>
    <string name="please_tap_your_favorite_categories">Please Tap your Favorite Categories</string>
    <string name="start_grabing">Start Gaping Your Offers Now!</string>
    <string name="Congratulations">Congratulations!</string>
    <string name="your_mobile_has_been_verfied">Your Mobile Has been Verfied</string>
    <string name="create_a_password_to_protect_your_account">Create a password to protect your account</string>
    <string name="Create_an_Account">Create an Account</string>
    <string name="Biggest_Qatar_Market_Offers">Biggest Qatar Market Offers</string>
    <string name="OTP_Verfication">OTP Verfication</string>
    <string name="The_Code_Has_Been_Sent">The Code Has Been Sent!</string>
    <string name="FullDayOffer">Full Day Offer</string>
    <string name="Get">Get</string>
    <string name="Mobile">Mobile</string>
    <string name="Fahion">Fahion</string>
    <string name="Food">Food</string>
    <string name="Colorr">"Color |"</string>
    <string name="Remove">Remove</string>
    <string name="Filter">Filter</string>
    <string name="Type">Type</string>
    <string name="Section">Section</string>
    <string name="Price">Price</string>
    <string name="Apply">Apply</string>
    <string name="Change_city">(Change city)</string>
    <string name="Description">Description </string>
    <string name="ColorOnly">Color</string>
    <string name="Camera">Camera</string>
    <string name="Screen">Screen</string>
    <string name="Memory">Memory</string>
    <string name="Battery">Battery</string>
    <string name="ADDCopon">ADD Copon</string>
    <string name="Shipping_fee">Shipping fee </string>
    <string name="Sub_total">Sub total</string>
    <string name="Total">Total</string>
    <string name="CheckOut">CheckOut</string>
    <string name="Reviews">Reviews</string>
    <string name="Deny">Deny</string>
    <string name="Accept">Accept</string>
    <string name="Products">Products</string>
    <string name="Sold_by">Sold by :</string>
    <string name="Excellent">Excellent</string>
    <string name="VeryGood">Very Good</string>
    <string name="Average">Average</string>
    <string name="Poor">Poor</string>
    <string name="Terrible">Terrible</string>
    <string name="People_also_bought">People also bought</string>
    <string name="Name">Name</string>
    <string name="Payment">Payment</string>
    <string name="Card_number">Card number</string>
    <string name="ExpireDate">Expire Date</string>
    <string name="CVV">CVV</string>
    <string name="Cash">Cash</string>
    <string name="CART">CART</string>
    <string name="Full_Day_Offer">Full Day Offer</string>
    <string name="Enter_Your_Mobile_Number">Enter Your Mobile Number</string>

    <string name="Sign_in_to_your_account">Sign in to your account</string>
    <string name="Enter_your_mobile_number_sign_in">Enter your mobile number sign in</string>
    <string name="No_network_availabe">No network availabe!</string>
    <string name="SIGN_UP">SIGN UP</string>
    <string name="VALIDATE">VALIDATE</string>
    <string name="ChooseCity">Choose City</string>
    <string name="ShipmentAddress">Shipment Address</string>
    <string name="Street">Street</string>
    <string name="Building">Building</string>
    <string name="DONE">DONE</string>
    <string name="Your_code">Your code</string>
    <string name="Continue_shopping">Continue shopping</string>
    <string name="BestDeals">Best Deals</string>
    <string name="AddRate">Add Rate</string>
    <string name="password_and_confirmation">Password and Confirmation password doesn\'t match</string>
    <string name="Gender_required">"Gender required!  "</string>
    <string name="SIGN_IN">SIGN IN</string>
    <string name="CREATE_A_NEW_ACCOUNT">CREATE A NEW ACCOUNT</string>
    <string name="Please_enter_your_mobile_number">Please enter your mobile number</string>
    <string name="Use_your_email_to_sign_in">Use your email to sign in</string>
    <string name="GO_MARKETER">GO MARKETER</string>
    <string name="forget_password">forget password</string>
    <string name="SEND_PASSCODE">SEND PASSCODE</string>
    <string name="ENTER_PASS_CODE">ENTER PASS CODE</string>
    <string name="Enter_Your_Email_Address">Enter Your Email Address</string>
    <string name="Use_your_phone_number_instead">Use your phone number instead</string>
    <string name="Create_a_new_password">Create a new password</string>
    <string name="First_name">First name</string>
    <string name="Last_name">Last name</string>
    <string name="Skip_now">Skip now</string>
    <string name="My_Status">My Status</string>
    <string name="Favorites">Favorites</string>
    <string name="Policies">Policies</string>
    <string name="Contact">Contact</string>
    <string name="Categories">Categories</string>
    <string name="Marketers">Marketers</string>
    <string name="AddCategories">Add Categories</string>
    <string name="EditFavorites">Edit Favorites</string>
    <string name="GO">GO</string>
    <string name="Log_in">Log in</string>
    <string name="Low_offers">Low offers</string>
    <string name="Address">Address</string>
    <string name="CHANGE_PASSWORD">CHANGE PASSWORD</string>
    <string name="GettingStarted">Getting Started</string>
    <string name="WelcomeBack">Welcome Back!</string>
    <string name="ResetPasscode">Reset Passcode</string>
    <string name="code">+974</string>
    <string name="RedeemOffer">Redeem Offer</string>
    <string name="SizeOnly">Size</string>
    <string name="Join_The_Marketer_and_Enjoy">Join The Marketer and Enjoy</string>
    <string name="A_Varify_Of_Top_Offers_in_Qatars_Market">A Varify Of Top Offers in Qatar\'s Market</string>
    <string name="MobileVerification">Mobile Verification</string>
    <string name="FourDigitCode_is_Sent_to_your_Mobile">4 Digit Code is Sent to your Mobile</string>
    <string name="Verify">Verify</string>
    <string name="Did_not_recieve_code_RESEND">Didn\'t recieve code RESEND</string>
    <string name="Create_your_own_username">Create your own username</string>
    <string name="CreateUsername">Create Username</string>
    <string name="MediumOffers">Medium Offers</string>
    <string name="Go_Marketer">Go Marketer</string>
    <string name="iNeed">i Need</string>
    <string name="PleaseComplete_your_profile">Please Complete your profile</string>
    <string name="Kinds">Kinds</string>
    <string name="Hot12QAR">Hot (12 QAR)</string>
    <string name="Out_of_8">Out of 8:0</string>
    <string name="By_location">By location</string>
    <string name="Alphabetical">Alphabetical</string>
    <string name="Redeem_offer">Redeem offer</string>
    <string name="Staff_must_enter_PIN_to_use_this_offer">Staff must enter PIN to use this offer</string>
    <string name="Submit">Submit</string>
    <string name="OrderCompleted">Order Completed</string>
    <string name="Notifications">Notifications</string>
    <string name="min">min</string>
    <string name="max">max</string>
    <string name="Done">Done</string>
    <string name="Reset">Reset</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_activity_search_result">SearchResultActivity</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="home_second">Home Second</string>
    <string name="Min_password_must_be_at_least_6_Chrachter">Min password must be at least 6 Chrachter and  max 16 Charachter</string>
    <string name="More">More</string>
    <string name="Arabic">ع</string>
    <string name="Redeeem">Redeeem</string>
</resources>
