<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">



    <TextView
        android:id="@+id/tCategory"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableRight="@drawable/next2"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="@dimen/_11sdp"
        android:paddingStart="20dp"
        android:textSize="@dimen/_12ssp"
        android:paddingEnd="20dp"
        android:text="@string/Categories"
        android:textColor="@color/colorBlack"
        android:fontFamily="@font/montserrat_regular"
        />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvCategories"
        android:layout_width="match_parent"
        app:layout_constraintTop_toBottomOf="@id/tCategory"
        android:layout_height="@dimen/_75sdp"
        app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
        app:spanCount="2"
        tools:listitem="@layout/row_filter_by_categories"
        android:layout_margin="@dimen/_10sdp"


        />
    <View
        android:id="@+id/line1"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_1sdp"
        android:background="@color/colorGrey02"
        android:layout_marginTop="@dimen/_9sdp"
        app:layout_constraintTop_toBottomOf="@id/rvCategories"
        />
    <TextView
        android:id="@+id/tSize"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableEnd="@drawable/next2"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="@dimen/_11sdp"
        android:drawablePadding="5dp"
        android:paddingStart="20dp"
        android:textSize="@dimen/_12ssp"
        android:paddingEnd="20dp"
        app:layout_constraintTop_toBottomOf="@id/line1"
        android:text="@string/Section"
        android:fontFamily="@font/montserrat_regular"
        android:textColor="@color/colorBlack" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvSize"
       android:layout_margin="@dimen/_10sdp"
        android:layout_width="match_parent"
        app:layout_constraintTop_toBottomOf="@id/tSize"
        android:layout_height="wrap_content"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        android:orientation="horizontal"

        />
    <View
        android:id="@+id/line2"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_1sdp"
        android:background="@color/colorGrey02"
        android:layout_marginTop="@dimen/_9sdp"
        app:layout_constraintTop_toBottomOf="@id/rvSize"
        />
    <TextView
        android:id="@+id/tPrice"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="@dimen/_11sdp"
        android:drawablePadding="5dp"
        android:paddingStart="20dp"
        android:textSize="@dimen/_12ssp"
        android:paddingEnd="20dp"
        app:layout_constraintTop_toBottomOf="@id/line2"
        android:text="@string/Price"
        android:textColor="#263238"
        android:fontFamily="@font/montserrat_regular"
        android:drawableEnd="@drawable/next2"/>

    <EditText
        android:id="@+id/etMinPrice"
        android:layout_width="@dimen/_90sdp"
        android:layout_height="@dimen/_20sdp"
        android:layout_margin="@dimen/_10sdp"
        app:layout_constraintStart_toStartOf="parent"
        android:background="@drawable/et_min_price"
        android:hint="@string/min"
        android:gravity="center"
        android:textAllCaps="true"
        android:textSize="@dimen/_10ssp"
        android:textColor="@color/colorGrey05"
        android:fontFamily="@font/montserrat_regular"
        app:layout_constraintTop_toBottomOf="@id/tPrice"
        android:layout_marginTop="@dimen/_12sdp"
        android:layout_marginStart="@dimen/_5sdp"
        />
    <EditText
        android:id="@+id/etMaxPrice"
        android:layout_width="@dimen/_90sdp"
        android:layout_height="@dimen/_20sdp"
        android:layout_margin="@dimen/_10sdp"
        app:layout_constraintStart_toEndOf="@id/etMinPrice"
        android:background="@drawable/et_min_price"
        android:hint="@string/max"
        android:gravity="center"
        android:textAllCaps="true"
        android:textSize="@dimen/_10ssp"
        android:textColor="@color/colorGrey05"
        android:fontFamily="@font/montserrat_regular"
        app:layout_constraintTop_toBottomOf="@id/tPrice"
        android:layout_marginTop="@dimen/_12sdp"
        />
    <View
        android:id="@+id/line3"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_1sdp"
        android:background="@color/colorGrey02"
        android:layout_marginTop="@dimen/_9sdp"
        app:layout_constraintTop_toBottomOf="@id/etMinPrice"
        />
    <Button
        android:layout_width="@dimen/_120sdp"
        android:layout_height="@dimen/_40sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:background="@color/colorRed02"
        android:layout_marginTop="@dimen/_11ssp"
        android:text="@string/Reset"
        android:textAllCaps="true"
        android:textStyle="bold"
        android:textColor="@color/colorRed"/>
    <Button
        android:layout_width="@dimen/_120sdp"
        android:layout_height="@dimen/_40sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:background="@color/colorRed"
        android:layout_marginTop="@dimen/_11ssp"
        android:text="@string/Done"
        android:textAllCaps="true"
        android:textColor="@color/colorWhite"/>
</androidx.constraintlayout.widget.ConstraintLayout>