<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/protectAccountContainer"
    android:background="@color/colorWhite"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.Register.ProtectAccountFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/mask_group1">
        <TextView
            android:layout_width="@dimen/_25sdp"
            android:layout_height="@dimen/_25sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginEnd="@dimen/_12sdp"
            android:layout_marginTop="@dimen/_12sdp"
            android:background="@drawable/colored_textview_circle"
            android:textColor="@color/colorWhite"
            android:text="@string/Arabic"
            android:gravity="center"
            />
        <ImageView
            android:id="@+id/imageView"
            android:layout_width="@dimen/_130sdp"
            android:layout_height="@dimen/_100sdp"
            android:layout_marginTop="@dimen/_30sdp"
            android:src="@drawable/logo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

       <!-- <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/_290sdp"
            android:layout_marginTop="@dimen/_25sdp"
            android:background="@drawable/login_corner"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="@dimen/_12sdp"
            android:layout_marginEnd="@dimen/_12sdp"
            app:layout_constraintTop_toBottomOf="@id/imageView">-->

            <TextView
                android:id="@+id/otp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_40sdp"
                android:textColor="@color/colorBlack"
                android:textSize="@dimen/_12sdp"
                android:text="@string/Congratulations"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/imageView"
                android:fontFamily="@font/montserrat_bold"/>

            <TextView
                android:id="@+id/biggesrQatar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorBlue"
                android:layout_marginTop="@dimen/_15sdp"
                android:text="@string/your_mobile_has_been_verfied"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/otp"
                tools:layout_editor_absoluteY="90dp"
                android:fontFamily="@font/montserrat_regular"/>


            <TextView
                android:id="@+id/createPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_6sdp"
                android:text="@string/create_a_password_to_protect_your_account"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/biggesrQatar"
                android:fontFamily="@font/montserrat_regular"
                />
            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraintPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/createPassword"
                android:layout_marginEnd="@dimen/_27sdp"
                android:layout_marginStart="@dimen/_27sdp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="@dimen/_12sdp"
                android:background="@drawable/et_password">
            <EditText
                android:id="@+id/etPassword"
                android:layout_width="@dimen/_220sdp"
                android:layout_height="@dimen/_40sdp"
                android:background="@null"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:ems="10"
                android:textSize="@dimen/_12ssp"
                android:inputType="textPassword"
                android:gravity="center"
                android:fontFamily="@font/montserrat_regular"
                android:hint="@string/Create_a_new_password"

                />
                <ImageView
                    android:id="@+id/icPasswordValidate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toEndOf="@id/etPassword"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"

                    />
            </androidx.constraintlayout.widget.ConstraintLayout>
<androidx.constraintlayout.widget.ConstraintLayout
  android:id="@+id/constraintConfirmPassword"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginEnd="@dimen/_27sdp"
    android:layout_marginStart="@dimen/_27sdp"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    android:layout_marginTop="@dimen/_12sdp"
    app:layout_constraintTop_toBottomOf="@id/constraintPassword"
    android:background="@drawable/et_password">
            <EditText
                android:id="@+id/etConfirmPassword"
                android:layout_width="@dimen/_220sdp"
                android:layout_height="@dimen/_40sdp"
                android:background="@null"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:ems="10"
                android:textSize="@dimen/_12ssp"
                android:inputType="textPassword"
                android:gravity="center"
                android:hint="@string/ConfirmPassword"
                android:fontFamily="@font/montserrat_regular" />
    <ImageView
        android:id="@+id/icConfirmPasswordValidate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/etConfirmPassword"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"

        />
</androidx.constraintlayout.widget.ConstraintLayout>
            <Button
                android:id="@+id/btnContinueRegister"
                android:layout_width="@dimen/_157sdp"
                android:layout_height="@dimen/_32sdp"
                android:layout_marginStart="@dimen/_27sdp"
                android:layout_marginEnd="@dimen/_27sdp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:background="@drawable/btn_disable_continue"
                android:text="@string/Continue"
                android:textAllCaps="true"
                android:textSize="@dimen/_11ssp"
                android:textColor="@color/colorWhite"
                app:layout_constraintTop_toBottomOf="@id/constraintConfirmPassword"
                android:layout_marginTop="@dimen/_20sdp"
                />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

