<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/layout_bg"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/mask_group1">


        <!-- <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="@dimen/_290sdp"
             android:layout_marginTop="@dimen/_25sdp"
             android:background="@drawable/login_corner"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             android:layout_marginStart="@dimen/_12sdp"
             android:layout_marginEnd="@dimen/_12sdp"
             app:layout_constraintTop_toBottomOf="@id/imageView">-->

        <TextView
            android:id="@+id/otp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_50sdp"
            android:textColor="@color/colorBlack"
            android:textSize="@dimen/_12sdp"
            android:text="@string/Congratulations"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:fontFamily="@font/montserrat_bold"/>

        <TextView
            android:id="@+id/biggesrQatar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorBlue"
            android:layout_marginTop="@dimen/_15sdp"
            android:text="@string/your_mobile_has_been_verfied"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/otp"
            android:fontFamily="@font/montserrat_regular"/>


        <TextView
            android:id="@+id/createPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_6sdp"
            android:text="@string/create_a_password_to_protect_your_account"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/biggesrQatar"
            android:fontFamily="@font/montserrat_regular"
            />
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintUserPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/createPassword"
            android:layout_marginEnd="@dimen/_27sdp"
            android:layout_marginStart="@dimen/_27sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="@dimen/_12sdp"
            android:background="@drawable/et_password">
            <EditText
                android:id="@+id/etUserPassword"
                android:layout_width="@dimen/_200sdp"
                android:layout_height="@dimen/_35sdp"
                android:background="@null"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:ems="10"
                android:textSize="@dimen/_12ssp"
                android:inputType="text"
                android:gravity="center"
                android:fontFamily="@font/montserrat_regular"
                android:hint="@string/Create_a_new_password"
                />
            <ImageView
                android:id="@+id/icCheckPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toEndOf="@id/etUserPassword"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                />
        </androidx.constraintlayout.widget.ConstraintLayout>
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintUserConfirmPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_27sdp"
            android:layout_marginStart="@dimen/_27sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="@dimen/_12sdp"
            app:layout_constraintTop_toBottomOf="@id/constraintUserPassword"
            android:background="@drawable/et_password">
            <EditText
                android:id="@+id/etUserConfirmPassword"
                android:layout_width="@dimen/_200sdp"
                android:layout_height="@dimen/_35sdp"
                android:background="@null"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:ems="10"
                android:textSize="@dimen/_12ssp"
                android:inputType="text"
                android:gravity="center"
                android:hint="@string/ConfirmPassword"
                android:fontFamily="@font/montserrat_regular" />
            <ImageView
                android:id="@+id/icCheckConfirmPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toEndOf="@id/etUserConfirmPassword"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                />
        </androidx.constraintlayout.widget.ConstraintLayout>
        <Button
            android:id="@+id/btnConfirm"
            android:layout_width="@dimen/_157sdp"
            android:layout_height="@dimen/_32sdp"
            android:layout_marginStart="@dimen/_27sdp"
            android:layout_marginEnd="@dimen/_27sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:background="@drawable/btn_disable_continue"
            android:text="@string/Continue"
            android:textAllCaps="true"
            android:textSize="@dimen/_11ssp"
            android:textColor="@color/colorWhite"
            app:layout_constraintTop_toBottomOf="@id/constraintUserConfirmPassword"
            android:layout_marginTop="@dimen/_20sdp"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="@dimen/_50sdp"
            />


    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>